# polkadot-referenda-tester

./: .gitignore  .prettierignore  README.md  biome.json  eslint.config.mjs  package-lock.json  package.json  referendas_at_staking.txt  referendas_at_warmup.txt  test-ongoing-refs.sh  tsconfig.json
.github/workflows/: integration-tests.yml
integration-tests/: Cargo.toml  README.md  chain_spec.json
integration-tests/chain-specs/: collectives-polkadot-local-raw.json
integration-tests/runtimes/fast/: asset_hub_kusama_runtime.compact.compressed.wasm  asset_hub_polkadot_runtime.compact.compressed.wasm  collectives_polkadot_runtime.compact.compressed.wasm  staging_kusama_runtime.compact.compressed.wasm
integration-tests/scripts/: build-fast-runtimes.sh  download-binaries.sh  generate-chainspecs.sh  update-runtimes.sh
integration-tests/src/: lib.rs
integration-tests/tests/: all_tracks.rs  approved_future_enactment.rs  generate_chain_specs.rs  scenarios.rs  tests.rs
integration-tests/tests/common/: call_data.rs  config.rs  context.rs  extrinsic_submitter.rs  mod.rs  network.rs  port_allocator.rs  raw_storage.rs  tool_runner.rs  tracks.rs
runtimes/fast/: polkadot_runtime.compact.compressed.wasm
scripts/: build-fast-runtimes.sh  download-binaries.sh  generate-chainspecs.sh  update-runtimes.sh
src/: cli.ts  types.ts
src/__tests__/: chain-endpoint-parser.test.ts  chain-registry.test.ts  dispatch-result.test.ts  event-serializer.test.ts  execution-result-checker.test.ts  network-coordinator-routing.test.ts  referenda-fetcher.test.ts  referendum-simulator.test.ts  (+5 more)
(+24 files in other folders)
