[workspace]

[package]
name = "polkadot-referenda-tester-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false
autotests = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[[test]]
name = "generate_chain_specs"
path = "tests/generate_chain_specs.rs"

[dependencies]
anyhow = "1"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "time", "process"] }
serde_json = "1"

# Zombienet SDK for spawning test networks
zombienet-sdk = "0.4.5"
zombienet-orchestrator = "0.4.5"
zombienet-configuration = "0.4.5"

# subxt for dynamic call data generation (version must match zombienet-sdk's subxt)
subxt = { version = "0.44", default-features = false, features = ["jsonrpsee", "native"] }
subxt-signer = { version = "0.44", features = ["sr25519"] }

# For blake2_256 hashing of proposal call data
sp-crypto-hashing = "0.1"
